# LostPeterVulkan

./: .gitignore  Build_MacOS.sh  Build_Windows.bat  LICENSE.md  README.md
Dependencies/Sources/imgui-1.85/: CMakeLists.txt
Dependencies/Sources/imgui-1.85/imgui/: imconfig.h
Dependencies/Sources/imgui-1.85/impl_dx12/: imgui_impl_dx12.cpp  imgui_impl_dx12.h
Dependencies/Sources/imgui-1.85/impl_gl3/: imgui_impl_opengl3.cpp
Dependencies/Sources/imgui-1.85/impl_glfw/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
Dependencies/Sources/imgui-1.85/impl_metal/: imgui_impl_metal.h  imgui_impl_metal.mm
Dependencies/Sources/tinyxml-2.6.2/: CMakeLists.txt
Dependencies/Sources/zthread-2.3.2/: CMakeLists.txt
Dependencies/Sources/zthread-2.3.2/src/: Debug.h  (+5 more)
LostPeterPlugin/LostPeterPluginRendererVulkan/: CMakeLists.txt
LostPeterPlugin/LostPeterPluginRendererVulkan/include/: VulkanBuffer.h  VulkanBufferIndex.h  VulkanBufferUniform.h  VulkanBufferVertex.h  VulkanCommandPool.h  VulkanCommandPoolManager.h  VulkanConverter.h  VulkanDebug.h  VulkanDescriptorPool.h  VulkanDescriptorPoolManager.h  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.h  VulkanDescriptorSetLayoutManager.h  VulkanDescriptorSetManager.h  VulkanDevice.h  VulkanDeviceMemoryAllocation.h  VulkanDeviceMemoryManager.h  VulkanFence.h  VulkanFenceManager.h  VulkanFrameBuffer.h  VulkanFrameBufferAttachment.h  VulkanFrameBufferDescriptor.h  VulkanFrameBufferManager.h  VulkanInstance.h  VulkanPipeline.h  VulkanPipelineCache.h  VulkanPipelineLayout.h  VulkanPipelineLayoutManager.h  VulkanPipelineManager.h  VulkanPlugin.h  VulkanPreDefine.h  VulkanPreInclude.h  VulkanQueue.h  VulkanRenderFrameBufferDescriptor.h  VulkanRenderPass.h  VulkanRenderPassDescriptor.h  VulkanRenderPassDescriptorManager.h  VulkanRenderPassManager.h  VulkanRenderTexture.h  VulkanRenderWindow.h  (+20 more)
LostPeterPlugin/LostPeterPluginRendererVulkan/src/: VulkanBuffer.cpp  VulkanBufferIndex.cpp  VulkanBufferUniform.cpp  VulkanBufferVertex.cpp  VulkanCommandPool.cpp  VulkanCommandPoolManager.cpp  VulkanConverter.cpp  VulkanDebug.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorPoolManager.cpp  VulkanDescriptorSet.cpp  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayoutManager.cpp  VulkanDescriptorSetManager.cpp  VulkanDevice.cpp  VulkanDeviceMemoryAllocation.cpp  VulkanDeviceMemoryManager.cpp  VulkanFence.cpp  VulkanFenceManager.cpp  VulkanFrameBuffer.cpp  VulkanFrameBufferAttachment.cpp  VulkanFrameBufferDescriptor.cpp  VulkanFrameBufferManager.cpp  VulkanInstance.cpp  VulkanLayer.cpp  VulkanPipeline.cpp  VulkanPipelineCache.cpp  VulkanPipelineLayout.cpp  VulkanPipelineLayoutManager.cpp  VulkanPipelineManager.cpp  VulkanPlugin.cpp  VulkanPreDefine.cpp  VulkanPreInclude.cpp  VulkanQueue.cpp  VulkanRenderFrameBufferDescriptor.cpp  VulkanRenderPass.cpp  VulkanRenderPassDescriptor.cpp  VulkanRenderPassDescriptorManager.cpp  VulkanRenderPassManager.cpp  VulkanRenderTexture.cpp  (+22 more)
LostPeterVulkan/LostPeterFoundation/: CMakeLists.txt
LostPeterVulkan/LostPeterFoundation/include/: FAABB.h  FArchive.h  FArchiveFactory.h  FArchiveFileSystem.h  FArchiveFileSystemFactory.h  FArchiveManager.h  FArchiveZip.h  FArchiveZipFactory.h  FAtomicCount.h  FBitwise.h  FBox.h  FCamera.h  FCapsule.h  FCircle.h  FCodec.h  FCodecManager.h  FComplex.h  FCone.h  FCylinder.h  FDynamicLib.h  FDynamicLibManager.h  FEquationCubic.h  FEquationQuadratic.h  FEquationQuartic.h  FFactory.h  FFileBase.h  FFileBinary.h  FFileIO.h  FFileManager.h  FFileMemory.h  FFileXML.h  FFileXMLTiny.h  FFileXMLTinyConfig.h  FFrustum.h  FIterator.h  FLine.h  FLog.h  FLogManager.h  FMath.h  FMeshData.h  (+46 more)
LostPeterVulkan/LostPeterFoundation/src/: FAABB.cpp  FArchive.cpp  FArchiveFactory.cpp  FArchiveFileSystem.cpp  FArchiveFileSystemFactory.cpp  FArchiveManager.cpp  FArchiveZip.cpp  FArchiveZipFactory.cpp  FAtomicCount.cpp  FBitwise.cpp  FBox.cpp  FCamera.cpp  FCapsule.cpp  FCircle.cpp  FCodec.cpp  FCodecManager.cpp  FComplex.cpp  FCone.cpp  FCylinder.cpp  FDynamicLib.cpp  FDynamicLibManager.cpp  FEquationCubic.cpp  FEquationQuadratic.cpp  FEquationQuartic.cpp  FFileBase.cpp  FFileBinary.cpp  FFileIO.cpp  FFileManager.cpp  FFileMemory.cpp  FFileXML.cpp  FFileXMLTiny.cpp  FFileXMLTinyConfig.cpp  FFrustum.cpp  FLine.cpp  FLog.cpp  FLogManager.cpp  FMath.cpp  FMeshData.cpp  FMeshDataLoader.cpp  FMeshGeometry.cpp  (+34 more)
Sample/vulkan_001_triangle/pc/: CMakeLists.txt  main.cpp
Sample/vulkan_010_lighting/pc/: CMakeLists.txt  main.cpp
Sample/vulkan_013_indirectdraw/share/: CMakeLists.txt  vulkan_013_indirectdraw.cpp  vulkan_013_indirectdraw.h
VulkanUtil/Core/: CMakeLists.txt
VulkanUtil/Core/include/: App.h  AppEx.h  MathUtil.h  OCUtil.h  PreDefine.h  PreInclude.h  PreIncludeStd.h  PreIncludeThird.h  PreMacro.h  StringUtil.h  TextureUtil.h  VulkanBase.h  VulkanBitwise.h  VulkanBuffer.h  VulkanBufferIndex.h  VulkanBufferUniform.h  VulkanBufferVertex.h  VulkanCamera.h  VulkanDefine.h  VulkanDevice.h  VulkanDeviceMemoryAllocation.h  VulkanDeviceMemoryManager.h  VulkanFence.h  VulkanInstance.h  VulkanLight.h  VulkanLog.h  VulkanLogManager.h  VulkanManager.h  VulkanMaterial.h  VulkanMath.h  VulkanMathBox.h  VulkanMesh.h  VulkanMeshGeometry.h  VulkanMeshLoader.h  VulkanMeshSub.h  VulkanMeshUtil.h  VulkanObject.h  VulkanQueue.h  VulkanSample.h  VulkanSceneManager.h  (+41 more)
VulkanUtil/Core/src/: App.cpp  AppEx.cpp  MathUtil.cpp  OCUtil.mm  PreDefine.cpp  PreInclude.cpp  PreIncludeStd.cpp  StringUtil.cpp  TextureUtil.cpp  VulkanBase.cpp  VulkanBitwise.cpp  VulkanBufferIndex.cpp  VulkanBufferUniform.cpp  VulkanBufferVertex.cpp  VulkanCamera.cpp  VulkanDefine.cpp  VulkanDevice.cpp  VulkanDeviceMemoryAllocation.cpp  VulkanFence.cpp  VulkanFenceManager.cpp  VulkanInstance.cpp  VulkanLayer.cpp  VulkanLight.cpp  VulkanLog.cpp  VulkanLogManager.cpp  VulkanManager.cpp  VulkanMaterial.cpp  VulkanMath.cpp  VulkanMesh.cpp  VulkanMeshGeometry.cpp  VulkanMeshLoader.cpp  VulkanMeshSub.cpp  VulkanMeshUtil.cpp  VulkanObject.cpp  VulkanPixelBox.cpp  VulkanPixelFormat.cpp  VulkanQueue.cpp  VulkanSample.cpp  VulkanSceneManager.cpp  VulkanSceneObject.cpp  (+39 more)
(+1804 files in other folders)
